2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/18_AsmEtPlusieursParam.deca
// Description:
//    Programme : utilisation de asm qui prend plusieursparams
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 16/01/2024
class A {
    protected int x;
    void get(int x, float f) asm (
        "hello "
    );

}