2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/23_AsmSansString.deca
// Description:
//    Programme mal utilisantion de asm sans string
// Resultats:
//      Programme incorrecte syntaxiquement : 9:20: mismatched input ';' expecting '('
// Historique:
//    cree le 17/01/2023
class AB {
    protected boolean f;
    void getF() asm () ;
}